--- a/src/App.scss
+++ b/src/App.scss
@@ -1,10 +1,13 @@
 body {
   background: #000000;
+  color: #ffffff
 }
 .App-logo {
   height: 40vmin;
   pointer-events: none;
 }
+
+
 
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
@@ -37,14 +40,21 @@ body {
 }
 
 canvas {
-  margin: 120px auto;
-  width: 100%;
+  width: 575px;
   image-rendering: pixelated;
+  z-index: 100;
+  position: absolute;
+  top: 200px;
+  left: 205px;
 }
-
+#gameboy-case {
+  width: 100%;
+}
 .gameboy {
-  width: 50%;
-  margin: auto;
+  position: absolute;
+  left: 25%;
+  width: 1000px;
+
 }
 
 .register-data {
