--- a/src/App.scss
+++ b/src/App.scss
@@ -1,51 +1,17 @@
 body {
-  background: #000000;
+  background: #1B1212;
   color: #ffffff
 }
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
 
 
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
 
 canvas {
   width: 575px;
   image-rendering: pixelated;
   z-index: 100;
   position: absolute;
-  top: 200px;
-  left: 205px;
+  top: 170px;
+  left: 210px;
 }
 #gameboy-case {
   width: 100%;
@@ -54,16 +20,34 @@ canvas {
   position: absolute;
   left: 25%;
   width: 1000px;
-
+  .load-game {
+    position: absolute;
+    top: 20px;
+    left: 160px;
+    #load-icon {
+      cursor: pointer;
+    }
+  }
 }
-
-.register-data {
-  width: 50%;
-  margin: auto;
-  .register-table {
-    td {
-      border: 1px solid gray;
-      border-collapse: collapse;
+.full-screen {
+  margin-top: 20px;
+  margin-left: 60px;
+  background: #1B1212;
+  color: white;
+  padding-top: 10px;
+  padding-left: 10px;
+  padding-right: 10px;
+  padding-bottom: 10px;
+  font-size: 16px;
+  border-color: white;
+}
+.controls {
+  float: right;
+  margin-top: 20px;
+  margin-right: 150px;
+  ul {
+    label {
+      font-weight: 700;
     }
   }
 }
