--- a/src/App.scss
+++ b/src/App.scss
@@ -62,7 +62,7 @@ canvas {
   margin-left: 60px;
   .button {
     box-shadow: none;
-    background: #1B1212;
+    background: #088F8F;
     margin-right: 10px;
     color: white;
     padding-top: 10px;
@@ -73,6 +73,6 @@ canvas {
     border-color: white;
   }
   .button.help {
-    background: #F2D2BD;
+    background: #FFBF00;
   }
 }
